-Fixed a missing translation
-Reset your aura cache to remove incorrect entires that were put in prior to version 4.0.1 beta3
-Instead of typing "raid" for units raid1 through raid25, you now must type "raid1-25". This will allow for much more flexibility, e.g. raid1-10.
-Spell cast conditions now allow you to specify if the cast must be interruptible.

v4.0.0 beta9
-Actually added mainassist and maintank to the unit dropdowns.
-Fixed an obscure error caused by casts with no start time (this happened on Al'Akir, and only for a split second)
-Made it impossible for the addon to destroy your settings when upgrading to beta8 from a version older than 3.0.0 after you had already upgraded one character's settings. (This wasn't happening anyway because a restart is absolutely required when upgrading to beta8 from any version)
-Fixed an error that was causing Kong UI Hider to break with TMW installed and at least one group enabled.

v4.0.0 beta8
-New condition: Resting.
-New condition: Encounter Resource, for tracking the level of encounter-specific 'resources' like corruption on Cho'gall and sound on Atramedes.
-New condition: Talent Tree, for specifying what talent tree must be active.
-New conditions: Unit speed/unit run speed, for checking the current movement speed/max run speed of your target.
-Toggling the 'Ignore Runes' setting should now properly toggle the 'Ignore Runes' setting.
-Rune conditions should now properly save.
-Merged the glaringly empty alpha/stacks/duration tab with the main tab.
-The option for item cooldowns to only show if equipped is back now. Oops.
-Fixed the bug that was causing icons to occasionally hide their texture in config mode.
-Item cooldowns that use slotIDs should now work a little better.
-Conditions and each icon type have been split off into their own file, so a complete restart of WoW will be needed when upgrading to this version.