@@ -18,6 +18,7 @@ v4.0.1 beta
 -Reset your aura cache to remove incorrect entires that were put in prior to version 4.0.1 beta3
 -Instead of typing "raid" for units raid1 through raid25, you now must type "raid1-25". This will allow for much more flexibility, e.g. raid1-10.
 -Spell cast conditions now allow you to specify if the cast must be interruptible.
+-Icon dropdowns for meta icons and icon shown conditions now divide the icons up by group (fix for too many icons syndrome, and to make it easier to find the one you need)
 
 v4.0.0 beta9
 -Actually added mainassist and maintank to the unit dropdowns.
